# dionysus

./: .gitignore  LICENSE  README.md  app.py  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test-package.yml  test.yml
dionysus/: __init__.py
dionysus/adapters/: dummy.py
dionysus/utils/: errors.py
src/: app.py  example.py
src/adapters/: dummy.py  redis.py
utils/: schemata.py
