[metadata]
name = Dionysus
version = 0.0.1
author = Joshua3212
author_email = author@example.com
description = Tiny framework for interacting with http and other protocols using custom adapters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joshua3212/Dionysus
project_urls =
    Bug Tracker = https://github.com/Joshua3212/Dionysus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src